--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,10 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     implementation 'com.google.android.material:material:1.2.1' // for TabLayout
+
+    //Textview animation
+    implementation "com.hanks:htextview-base:0.1.6"
+    implementation "com.hanks:htextview-typer:0.1.6" //typer
+    implementation "com.hanks:htextview-fall:0.1.6" //fall
+    implementation "com.hanks:htextview-evaporate:0.1.6" //evaporate
 }
